fix logged in as container and overflow text

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -59,8 +59,12 @@
 
 .logged-in-container {
 	display: flex;
-	justify-content: flex-start;
+	justify-content: flex-end;
 	margin: 15px;
+}
+
+.logged-in-item {
+	margin-right: 20px;
 }
 
 .logged-in-user {
